--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "inquirer": "^8.2.4",
+    "console.table": "^0.10.0",
+    "inquirer": "^8.2.5",
     "mysql2": "^3.3.3"
   }
 }
