fixed bug, now able to store data in database. added function to run respective prompt choices. removed unnecessary files. cleaned code for better readability

--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
+  "name": "employee.tracker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rajkdh/employee.tracker.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rajkdh/employee.tracker/issues"
+  },
+  "homepage": "https://github.com/rajkdh/employee.tracker",
   "dependencies": {
     "console.table": "^0.10.0",
-    "inquirer": "^8.2.5",
-    "mysql2": "^3.3.3"
+    "dotenv": "^16.0.3",
+    "inquirer": "^8.2.4",
+    "mysql2": "^3.2.0",
+    "sequelize": "^6.29.3"
   }
 }
